--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
-
+def cfg = rootProject.ext.android
+def dpc = rootProject.ext.dependencies
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion cfg.compileSdkVersion
+    buildToolsVersion cfg.buildToolsVersion
     defaultConfig {
-        applicationId "com.haishengyue.templaremoudle"
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        applicationId cfg.applicationId
+        minSdkVersion cfg.minSdkVersion
+        targetSdkVersion cfg.targetSdkVersion
+        versionCode cfg.versionCode
+        versionName cfg.versionName
+        testInstrumentationRunner cfg.testInstrumentationRunner
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -31,4 +32,17 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:gridlayout-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile ('com.alibaba.android:vlayout:1.2.2@aar') {
+        transitive = true
+    }
+
+    compile ('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
+        transitive = true
+    }
+
+    compile dpc.okhttputils
+    compile dpc.fastjson
+    compile dpc.glide
+    compile project(path: ':beanlibrary')
+    compile project(path: ':templatelibrary')
 }
