--- a/templatelibrary/build.gradle
+++ b/templatelibrary/build.gradle
@@ -32,4 +32,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(path: ':beanlibrary')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile ('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
+        transitive = true
+    }
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
