--- a/templatelibrary/build.gradle
+++ b/templatelibrary/build.gradle
@@ -37,4 +37,7 @@ dependencies {
         transitive = true
     }
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile ('com.alibaba.android:vlayout:1.2.2@aar') {
+        transitive = true
+    }
 }
