--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ def cfg = rootProject.ext.android
 def dpc = rootProject.ext.dependencies
 android {
     compileSdkVersion cfg.compileSdkVersion
-    buildToolsVersion cfg.buildToolsVersion
     defaultConfig {
         applicationId cfg.applicationId
         minSdkVersion cfg.minSdkVersion
@@ -22,27 +21,27 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:gridlayout-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile ('com.alibaba.android:vlayout:1.2.2@aar') {
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.android.support:support-vector-drawable:25.3.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:gridlayout-v7:25.3.1'
+    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation ('com.alibaba.android:vlayout:1.2.2@aar') {
         transitive = true
     }
 
-    compile ('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
+    implementation ('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
         transitive = true
     }
 
-    compile dpc.okhttputils
-    compile dpc.fastjson
-    compile dpc.glide
-    compile project(path: ':beanlibrary')
-    compile project(path: ':templatelibrary')
+    implementation dpc.okhttputils
+    implementation dpc.fastjson
+    implementation dpc.glide
+    implementation project(path: ':beanlibrary')
+    implementation project(path: ':templatelibrary')
 }
