--- a/templatelibrary/build.gradle
+++ b/templatelibrary/build.gradle
@@ -5,7 +5,6 @@ def dpc = rootProject.ext.dependencies
 
 android {
     compileSdkVersion cfg.compileSdkVersion
-    buildToolsVersion cfg.buildToolsVersion
     defaultConfig {
         minSdkVersion cfg.minSdkVersion
         targetSdkVersion cfg.targetSdkVersion
@@ -23,21 +22,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile project(path: ':beanlibrary')
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    testImplementation 'junit:junit:4.12'
+    implementation project(path: ':beanlibrary')
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
-    compile ('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
+    implementation ('com.alibaba.android:ultraviewpager:1.0.6.1@aar') {
         transitive = true
     }
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile ('com.alibaba.android:vlayout:1.2.2@aar') {
+    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation ('com.alibaba.android:vlayout:1.2.2@aar') {
         transitive = true
     }
 }
